--- a/package.json
+++ b/package.json
@@ -9,9 +9,19 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "auth": "^1.2.3",
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "fs": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.10.0",
-    "mongoose": "^8.8.1",
-    "nodemon": "^3.1.7"
+    "mongoose": "^7.5.0",
+    "mongoose-unique-validator": "^4.0.1",
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.7",
+    "sharp": "^0.33.5",
+    "tmp": "^0.2.3"
   }
 }
