--- a/package.json
+++ b/package.json
@@ -10,14 +10,21 @@
   "description": "",
   "dependencies": {
     "auth": "^1.2.3",
+    "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-rate-limit": "^7.5.0",
+    "express-validator": "^7.2.0",
+    "form-data": "^4.0.1",
     "fs": "^0.0.1-security",
+    "helmet": "^8.0.0",
+    "imagemagick": "^0.1.3",
+    "jimp": "^1.6.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.10.0",
-    "mongoose": "^7.5.0",
+    "mongoose": "^7.8.3",
     "mongoose-unique-validator": "^4.0.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7",
